Thu Dec  7 20:39:24 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix bug: Om*Iterators which were created over empty lists didn't
	  have null internals, causing them not to compare equal to end
	  iterators.

	* Added many asserts to iterator code.

Thu Dec  7 20:02:43 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Removed OmTermListIteratorMap - OmTermListIterator can now be
	  across either a map or an actual termlist.

	* Om*Iterator classes all now delete internals when reaching end,
	  freeing resources sooner and making the comparison operators much
	  simpler.

Thu Dec  7 18:33:03 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Updates to TODO

Thu Dec  7 18:32:39 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implementation of write locks for Quartz

Thu Dec  7 18:28:55 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fix to backendmanager which doesn't return writable databases
	  unnecessarily (which breaks things when there are write locks)

Thu Dec  7 18:25:50 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added test for Quartz write locks

Thu Dec  7 17:56:19 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add OmDocument::set_data() method which takes a string, instead of
	  an OmData object.  This allows, implicitly, use of const char *'s
	  as well.

	* Further fixes to quartztest.  It now compiles (though I've not
	  tried linking it yet...)  :)

Thu Dec  7 17:49:50 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed omkeylistiterator return types.

Thu Dec  7 17:27:57 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Moved get_document() from OmWritableDatabase to OmDatabase.

	* Added -> operator to OmKeyListIterator.  Fixed return values
	  and constness of Om*Iterator::operator *() methods.

	* Some fixes to quartztest.cc, but not enough to get it compiling.

Thu Dec 07 16:21:28 GMT 2000 Olly Betts
