@@ -1,3 +1,8 @@
+Fri Dec 08 12:08:49 GMT 2000 Olly Betts
+
+	* delve: if just given a database (or list of databases), report the
+	  number of documents and average document length.
+
 Thu Dec  7 20:39:24 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* Fix bug: Om*Iterators which were created over empty lists didn't
